--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Enoca
+
+# Veritabani baglanti bilgileri
+spring.datasource.url=jdbc:mysql://localhost:3306/enoca
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# Hibernate ayarlari
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Veritabani baglantisi için diger ayarlar
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8080
+
+
+
+
